Improve more Stream API usage.