@@ -18,7 +18,8 @@ public class PaintExecutor implements CommandExecutor, TabCompleter {
 
     private static final List<String> ART_NAMES = Arrays.stream(Art.values())
             .map(Art::name)
-            .map(String::toLowerCase).toList();
+            .map(String::toLowerCase)
+            .toList();
 
     @Override
     public void executeCommand(CommandSender sender, String[] arguments) {
@@ -46,7 +47,7 @@ public class PaintExecutor implements CommandExecutor, TabCompleter {
             String argumentLowered = argument.toLowerCase(Locale.ROOT);
             return ART_NAMES.stream()
                     .filter(artName -> artName.startsWith(argumentLowered))
-                    .collect(Collectors.toList());
+                    .toList();
         }
         return Collections.emptyList();
     }
